# metasci-universe

./: .gitignore  CLAUDE.md  MANIFEST.in  QUICKSTART.md  README.md  main.py  pyproject.toml
src/: __init__.py  metasci_universe.py  require_test.md
src/AuthorTool/: README.md  __init__.py  _internal.py  author_query.py
src/AuthorTool/output/: all_authors_bio.json  authors_summary.json  batch_authors.json  db_authors_by_doi.json  first_author_bio.json  hybrid_all_authors_db.json  hybrid_author_db.json  second_author_bio.json  test1_single_doi_summary.json  test3_second_author.json  test4_batch_dois.json  test5_author_id.json  test6_custom_fields.json  test7_force_db.json  test8_batch_large_db.json  test_summary.json
src/CitationAnalysisTool/: CitationAnalysisTool.md  __init__.py  bibliometric_analyzer.py  example_hcn_usage.py  historical_citation_network.py  rpys.py
src/CitationAnalysisTool/data/: analysis_result.json  hcn_analysis_results.json  quantitative_trading_analysis.json
src/DataExtractorTool/: RATE_LIMIT_IMPROVEMENTS.md  README.md  __init__.py  example_helper_search.py  get_citations.py  works_data_manager.py  works_extractor.py  works_extractor_optimized.py
src/DataExtractorTool/test_output/: .gitkeep
src/EmbeddingTool/: __init__.py
src/MacroAnalysisTool/: BUG_FIXES.md  TROUBLESHOOTING.md  __init__.py  data_enricher.py  macro_analyzer.py  quick_test_enricher.py
src/NetworkAnalysisTool/: __init__.py
src/SearchTool/: __init__.py  find_work.py
src/ToolReadme/: bibliometrix_integration.md  get_citation_doc.md  r_code_interpreter.md
src/TopicTool/: IMPLEMENTATION_SUMMARY.md  README.md  TOPIC_EVOLUTION_GUIDE.md  __init__.py  topic_analyzer.py  topic_modeling.py
