[project]
name = "metasci-universe"
version = "0.1.0"
description = "Meta science tool universe for conducting meta-scientific research and scientometric analysis"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "DoraJaymon"}
]
keywords = ["meta-science", "scientometrics", "bibliometrics", "openalex", "research-analysis", "ai-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "asyncpg>=0.29.0",      # PostgreSQL数据库连接
    "pyalex>=0.13",         # OpenAlex API客户端
    "numpy>=1.24.0",        # 数值计算
    "pandas>=2.0.0",        # 数据分析
]

[project.optional-dependencies]
# 所有功能（包括主题建模）
all = [
    # MacroAnalysisTool 需要
    "plotly>=5.14.0",
    "pycountry>=22.3.5",
    "kaleido>=0.2.1",
    # CitationAnalysisTool 需要
    "networkx>=3.0",
    "matplotlib>=3.7.0",
    # TopicTool 需要（ML相关重依赖）
    "bertopic>=0.15.0",
    "sentence-transformers>=2.2.0",
    "umap-learn>=0.5.3",
    "scikit-learn>=1.3.0",
]

# 开发依赖
dev = [
    "ipykernel>=7.1.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/DoraJaymon/metasci-universe"
Repository = "https://github.com/DoraJaymon/metasci-universe"
Documentation = "https://github.com/DoraJaymon/metasci-universe/tree/main/docs"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["metasci_universe"]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = [
    "*.tests",
    "*.tests.*",
    "tests.*",
    "tests",
    "*testpy*",
    "*.test_output",
    "*.test_output.*",
    "__pycache__",
]
